--- a/Smartphone-sales-manager/src/Smartphone_sales_management/UI/Component/SanPhamComponent/FormThemSanPham.form
+++ b/Smartphone-sales-manager/src/Smartphone_sales_management/UI/Component/SanPhamComponent/FormThemSanPham.form
@@ -505,11 +505,9 @@
                               </Group>
                               <EmptySpace min="-2" pref="83" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                  <Group type="103" groupAlignment="0" attributes="0">
-                                      <Component id="txtGianhap" alignment="0" min="-2" pref="164" max="-2" attributes="0"/>
-                                      <Component id="txtGia" alignment="0" min="-2" pref="164" max="-2" attributes="0"/>
-                                      <Component id="txtmancc" alignment="0" min="-2" pref="164" max="-2" attributes="0"/>
-                                  </Group>
+                                  <Component id="txtGianhap" alignment="0" min="-2" pref="164" max="-2" attributes="0"/>
+                                  <Component id="txtGia" alignment="0" min="-2" pref="164" max="-2" attributes="0"/>
+                                  <Component id="txtmancc" alignment="0" min="-2" pref="164" max="-2" attributes="0"/>
                                   <Component id="cbbncc" min="-2" pref="164" max="-2" attributes="0"/>
                                   <Component id="txtMausac" alignment="0" max="32767" attributes="0"/>
                                   <Component id="txtNamsx" alignment="0" max="32767" attributes="0"/>
@@ -719,9 +717,11 @@
             </Component>
             <Component class="javax.swing.JTextField" name="txtGia">
               <Properties>
+                <Property name="editable" type="boolean" value="false"/>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Arial" size="16" style="0"/>
                 </Property>
+                <Property name="text" type="java.lang.String" value="0"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel12">
@@ -741,9 +741,11 @@
             </Component>
             <Component class="javax.swing.JTextField" name="txtGianhap">
               <Properties>
+                <Property name="editable" type="boolean" value="false"/>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Arial" size="16" style="0"/>
                 </Property>
+                <Property name="text" type="java.lang.String" value="0"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel18">
